fix(collapse&progress): collapse&progress问题修改

--- a/packages/ui/collapse/src/index.less
+++ b/packages/ui/collapse/src/index.less
@@ -3,7 +3,7 @@
 .@{osui-collapse-class-prefix} {
     .ant-collapse-item {
         .ant-collapse-header {
-            color: #091e42;
+            color: var(--theme-heading-color);
             font-weight: 600;
             font-size: 14px;
             padding-top: 0;
@@ -12,7 +12,7 @@
             line-height: 32px;
 
             .anticon-right {
-                background: #f5f6f8;
+                background: var(--collapse-expand-icon-bg);
                 width: 16px;
                 height: 16px;
                 padding-top: 3px;
@@ -20,7 +20,7 @@
 
                 svg {
                     font-size: 10px;
-                    color: #2e405e;
+                    color: var(--theme-text-color);
                 }
             }
         }
@@ -34,7 +34,7 @@
 
     .ant-collapse-item > .ant-collapse-content > .ant-collapse-content-box {
         padding-left: 40px;
-        padding-top: 8px;
+        padding-top: 13px;
         padding-bottom: 8px;
     }
 }
